# IDATT2104-Nettverksprogrammering

./: .gitignore  CMakeLists.txt  README.md
Datakom/: DK øving 1.docx  DKØ4 - IP og Nettlaget.docx  Datakom Ø5.docx  datakom begreper.docx
Datakom/Wireshark pakker/: pinggoogleø4.pcapng  traceroutegoogleø4.pcapng  ø3del2.pcapng  øving1_pakke_http.pcapng  øving3_del2_pakke.pcapng
Programmering/: TCPWebServer  TCPWebServer.cpp  TCPwithTLS  TCPwithTLS.cpp  UDPClient  UDPClient.cpp  UDPServer  UDPServer.cpp  cplusplus  cplusplus.cpp  primenumber  primenumber.cpp  webserver  webserver.cpp  websocket.js  workers.cpp  workers_program
Programmering/TCPwithTLS.dSYM/Contents/: Info.plist
Programmering/TCPwithTLS.dSYM/Contents/Resources/DWARF/: TCPwithTLS
Programmering/TCPwithTLS.dSYM/Contents/Resources/Relocations/aarch64/: TCPwithTLS.yml
Programmering/sider/: index.html  page1.html  page2.html
Programmering/virtualization/: README.md  docker-compose.yml
Programmering/virtualization/backend/: CMakeLists.txt  Dockerfile  app.cpp
Programmering/virtualization/frontend/: index.html
Programmering/websocket/: index.html  websocket.js
